--- a/src/components/Vehicles/Edit/EditVehicle.css
+++ b/src/components/Vehicles/Edit/EditVehicle.css
@@ -11,7 +11,7 @@
   min-height: 100vh;
 }
 
-.login {
+.edit__vehicle {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,14 +23,14 @@
   padding: 40px 30px 44px;
 }
 
-.login__form {
+.edit__vehicleForm {
   text-align: center;
   width: 260px;
   margin: 0;
   display: grid;
 }
 
-.login__form > input,
+.edit__vehicleForm > input,
 select {
   width: 100%;
   height: 50px;
@@ -41,17 +41,17 @@ select {
   transition: all 0.375s;
 }
 
-.login__form > input:hover,
+.edit__vehicleForm > input:hover,
 select:hover {
   border: 2px solid #10449a;
 }
 
-.login__form > select:hover {
+.edit__vehicleForm > select:hover {
   cursor: pointer;
   border: 2px solid #10449a;
 }
 
-#login__formSubmitButton {
+#edit__formSubmitButton {
   cursor: pointer;
   width: 100%;
   height: 50px;
@@ -67,11 +67,11 @@ select:hover {
   margin-top: 20px;
 }
 
-#login__formSubmitButton:hover {
+#edit__formSubmitButton:hover {
   background: #1271b1;
 }
 
-#login__formCancelButton {
+#edit__formCancelButton {
   cursor: pointer;
   width: 100%;
   height: 50px;
@@ -87,6 +87,6 @@ select:hover {
   margin-top: 20px;
 }
 
-#login__formCancelButton:hover {
+#edit__formCancelButton:hover {
   background: #dddada;
 }
